--- a/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj
+++ b/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj
@@ -145,6 +145,10 @@
     <ClInclude Include="src\Process.h" />
     <ClInclude Include="src\TypedefRepo.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.gitignore" />
+    <None Include="..\README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
