Updated the screen -s and screen -r commands + MainConsole & Process

--- a/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj.filters
+++ b/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj.filters
@@ -38,6 +38,12 @@
     <ClCompile Include="src\Process.cpp">
       <Filter>Common Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Consoles\MarqueeConsole.cpp">
+      <Filter>Console Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Consoles\MarqueeConsole.h">
+      <Filter>Console Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\color.hpp">
