--- a/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj
+++ b/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="src\Consoles\AConsole.cpp" />
     <ClCompile Include="src\Consoles\BaseScreen.cpp" />
     <ClCompile Include="src\Consoles\MainConsole.cpp" />
+	<ClCompile Include="src\Consoles\MarqueeConsole.cpp" />
     <ClCompile Include="src\Process.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -142,6 +143,7 @@
     <ClInclude Include="src\Consoles\AConsole.h" />
     <ClInclude Include="src\Consoles\BaseScreen.h" />
     <ClInclude Include="src\Consoles\MainConsole.h" />
+	<ClCompile Include="src\Consoles\MarqueeConsole.h" />
     <ClInclude Include="src\Process.h" />
     <ClInclude Include="src\TypedefRepo.h" />
   </ItemGroup>
