--- a/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj.filters
+++ b/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj.filters
@@ -68,5 +68,6 @@
   <ItemGroup>
     <None Include="..\.gitignore" />
     <None Include="..\README.md" />
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
