--- a/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj
+++ b/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj
@@ -166,6 +166,7 @@
     <None Include="..\.gitignore" />
     <None Include="..\README.md" />
     <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
