feat: Implemeneted "initialize" command itself

--- a/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj.filters
+++ b/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj.filters
@@ -130,4 +130,7 @@
     <None Include="..\README.md" />
     <None Include="ClassDiagram.cd" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="config.txt" />
+  </ItemGroup>
 </Project>
