--- a/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj.filters
+++ b/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="src\Process.cpp">
       <Filter>Processes &amp; Commands</Filter>
     </ClCompile>
+    <ClCompile Include="src\RRScheduler.cpp">
+      <Filter>Schedulers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\color.hpp">
@@ -121,6 +124,9 @@
     </ClInclude>
     <ClInclude Include="src\Process.h">
       <Filter>Processes &amp; Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="src\RRScheduler.h">
+      <Filter>Schedulers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
