--- a/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj.filters
+++ b/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClCompile Include="src\MemoryManagementUnit.cpp">
       <Filter>Common</Filter>
     </ClCompile>
+    <ClCompile Include="src\PagingAllocator.cpp">
+      <Filter>Memory Manager</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\color.hpp">
@@ -156,6 +159,9 @@
     </ClInclude>
     <ClInclude Include="src\MemoryManagementUnit.h">
       <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="src\PagingAllocator.h">
+      <Filter>Memory Manager</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
