--- a/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj
+++ b/CSOPESY-OS-Emulator/CSOPESY-OS-Emulator.vcxproj
@@ -181,6 +181,7 @@
     <None Include="..\README.md" />
     <None Include="ClassDiagram.cd" />
     <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="config.txt" />
